migration-result/ver/13.x/management/guides/ec2-tags.mdx
---
title: EC2 Tags as Teleport Node Labels
description: How to set up Teleport Node labels based on EC2 tags
h1: Sync EC2 Tags and Teleport Node Labels
version: '13.x'
---

When running on an AWS EC2 instance, Teleport will automatically detect and import EC2 tags as
Teleport labels for SSH nodes, Applications, Databases, and Kubernetes clusters. Labels created
this way will have the `aws/` prefix. When the Teleport process starts, it fetches all tags from
the instance metadata service and adds them as labels. The process will update the tags every hour,
so newly created or deleted tags will be reflected in the labels.

If the tag `TeleportHostname` (case-sensitive) is present, its value will override the node's hostname.

```bash
$ tsh ls
Node Name            Address        Labels                                                                                                                  
-------------------- -------------- ----------------------------------------------------------------------------------------------------------------------- 
fakehost.example.com 127.0.0.1:3022 env=example,hostname=ip-172-31-53-70,aws/Name=atburke-dev,aws/TagKey=TagValue,aws/TeleportHostname=fakehost.example.com
```

<Note>
  For services that manage multiple resources (such as the Database Service), each resource will receive the
  same labels from EC2.
</Note>

## Prerequisites

<Tabs>
  <Tab title="Open Source">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.2.0.

      ```code
      $ tctl version
      # Teleport v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```

      See [Installation](/ver/13.x/installation) for details.
  </Tab>

  <Tab title="Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>

  <Tab title="Teleport Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0.
      To download these tools, visit the [Downloads](/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>
</Tabs>

- One Teleport agent running on an Amazon EC2 instance. See
  [our guides](/ver/13.x/agents/join-services-to-your-cluster) for how to set up Teleport agents.

## Enable tags in instance metadata

To allow Teleport to import EC2 tags, tags must be enabled in the instance metadata. This can be done
via the AWS console or the AWS CLI. See the [AWS documentation](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/Using_Tags.html#allow-access-to-tags-in-IMDS)
for more details.

<Note>
  Only instances that are running on the [Nitro system](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-types.html#ec2-nitro-instances)
  will update their tags while running. All other instance types [must be restarted](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/Using_Tags.html#work-with-tags-in-IMDS)
  to update tags.
</Note>

### AWS EC2 Console

To launch a new instance with instance metadata tags enabled:

1. Open `Advanced Options` at the bottom of the page.
2. Ensure that `Metadata accessible` is not disabled.
3. Enable `Allow tags in metadata`.

![Advanced Options](../../../../../assets/launch-instance-advanced-options-a8feeb2354.png)

To modify an existing instance to enable instance metadata tags:

1. From the instance summary, go to `Actions > Instance Settings > Allow tags in instance metadata`.
2. Enable `Allow`.

![Instance Settings](../../../../../assets/instance-settings-1faf46d230.png)

![Allow Tags](../../../../../assets/allow-tags-41ac3f6088.png)

### AWS CLI

To modify the instance at launch:

```code
$ aws ec2 run-instances \
    --image-id <image-id> \
    --instance-type <instance-type> \
    --metadata-options "InstanceMetadataTags=enabled"
    ...
```

To modify a running instance:

```code
$ aws ec2 modify-instance-metadata-options \
    --instance-id i-123456789example \
    --instance-metadata-tags enabled
```
